--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,8 @@
       <div id="connect">
         <h2>Connect with Me</h2>
 
-        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+        <a href="https://github.com/Fintech79"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+        <a href="https://www.linkedin.com/in/a-f-abdel-rahman-2b5a6a14/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
       </div>
     </section>
   </div>
