--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <p>My name is Abdel Rahman and I am excited aboout the prospect of learning how to program. Although this course is very fast paced and intensive, I am confident that I will be able to come up  to speed woth hard work and dedication.</p>
 
-      <p> On my free time I enjoy the outdoors, travelling and the Martial Art of Brazilian Jiu Jitsu. I feel that it provided me with some good balance, tranquilility and peace of mind.</p>
+      <p> On my free time I enjoy the outdoors, travelling and the Martial Art of Brazilian Jiu Jitsu. I am excited on embarking on thid new path andvaquiring excellent technical skills.</p>
 
     </section>
 
@@ -39,13 +39,15 @@
 
         <a href="https://github.com/Fintech79"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
         <a href="https://www.linkedin.com/in/a-f-abdel-rahman-2b5a6a14/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="https://stackoverflow.com/users/9782559/enpassantcbf"><img src="assets/images/stackoverflow-128.png" class="social" alt="stackoverflow" /></a>
+
       </div>
     </section>
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Abdel Rahman
+      
     </div>
   </footer>
 </body>
