--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,12 @@
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
 
-        <h3>Hangman</h3>
+        <h3></h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
 
-        <h3>RPG Game</h3>
+        <h3></h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
@@ -59,14 +59,14 @@
 
         <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
         <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="stackoverflow" /></a>
       </div>
     </section>
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      Copyright &copy; 2016 Abdel Rahman
     </div>
   </footer>
 </body>
