--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,15 @@
 
         <a href="https://github.com/Fintech79"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
         <a href="https://www.linkedin.com/in/a-f-abdel-rahman-2b5a6a14/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="https://stackoverflow.com/users/9782559/enpassantcbf"><img src="assets/images/stackoverflow-128.png" class="social" alt="stackoverflow" /></a>
+
       </div>
     </section>
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      Copyright &copy; 2016 A.F Abdel-Rahman
     </div>
   </footer>
 </body>
