--- a/portfolio.html
+++ b/portfolio.html
@@ -38,17 +38,17 @@
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
-        <h3>Trivia Game</h3>
+        <h3>Burger</h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Bamazon</h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>https://github.com/Fintech79/-liri-node-app</h3>
       </div>
 
     </section>
