--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,12 @@
   <title>Portfolio | Abdel-Rahman</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
 
 <body>
+  
 
   <header id="masthead">
     <div class="container">
@@ -24,18 +27,35 @@
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Portfolio</h1>
-
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
-
-        <h3></h3>
+      <!-- Button trigger modal -->
+<button type="image" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Launch demo modal
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="image" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Bamazon
+        </div>
+        <div class="modal-footer">
+          <button type="image" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="image" class="btn btn-primary">Save changes</button>
+        </div>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+    </div>
+  </div>
 
-        <h3></h3>
-      </div>
       <div class="work">
+        
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman" data-toggle="modal" data-target="#exampleModal">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
         <h3>Burger</h3>
@@ -69,6 +89,10 @@
       Copyright &copy; 2016 Abdel Rahman
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="btn.js"></script>
 </body>
 
 </html>
