--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Your Name</title>
+  <title>Contact | Abdel Rahman</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -59,7 +59,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 A.F Abdel-Rahman
+      Copyright &copy; 2019 A.F Abdel-Rahman
     </div>
   </footer>
 </body>
