--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <p>My name is Abdel Rahman and I am excited aboout the prospect of learning how to program. Although this course is very fast paced and intensive, I am confident that I will be able to come up  to speed woth hard work and dedication.</p>
 
-      <p> On my free time I enjoy the outdoors, travelling and the Martial Art of Brazilian Jiu Jitsu. I am excited on embarking on thid new path and aquiring excellent technical skills.</p>
+      <p> On my free time I enjoy the outdoors, traveling and the Martial Art of Brazilian Jiu Jitsu. I am excited on embarking on this new path & improving my technical skills.</p>
 
     </section>
 
